--- a/FindAoEII/MainWindow.xaml
+++ b/FindAoEII/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FindAoEII"
         mc:Ignorable="d"
-        Title="Find AoE II Installation" Width="800" Height="200"
+        Title="Find AoE II Installation" Width="800" Height="250"
         FontSize="16">
     <Border Padding="10">
         <StackPanel>
@@ -13,6 +13,8 @@
                      MouseDoubleClick="SelectAllTextbox"
                      Padding="2"
                      TextChanged="pathTextBox_TextChanged"></TextBox>
+            <CheckBox x:Name="copyHotkeys"
+                      Margin="0 10 0 0">Use my Steam AoE Hotkeys</CheckBox>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
